feat: search endpoint docs
