# public/openapi.json
@@ -24,6 +24,9 @@
     },
     {
       "name": "Categories"
+    },
+    {
+      "name": "Search"
     }
   ],
   "paths": {
@@ -1036,6 +1039,54 @@
           }
         ]
       }
+    },
+    "/search": {
+      "get": {
+        "tags": [
+          "Search"
+        ],
+        "summary": "",
+        "description": "",
+        "operationId": "searchIndex",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "search_term",
+            "schema": {
+              "type": "string",
+              "minLength": 2
+            },
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "schema": {
+              "enum": [
+                "conference",
+                "lecture"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SearchIndexResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -1213,6 +1264,99 @@
           "user_id": {
             "type": "integer",
             "example": 1
+          }
+        }
+      },
+      "ConferenceSearchItem": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "example": 1
+          },
+          "title": {
+            "type": "string",
+            "example": "Conference title"
+          },
+          "date": {
+            "type": "string",
+            "format": "date"
+          },
+          "latitude": {
+            "type": "number",
+            "minimum": -90,
+            "maximum": 90
+          },
+          "longitude": {
+            "type": "number",
+            "minimum": -180,
+            "maximum": 180
+          },
+          "country_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "day_start": {
+            "type": "string",
+            "example": "09:00:00"
+          },
+          "day_end": {
+            "type": "string",
+            "example": "18:00:00"
+          },
+          "category_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "type": {
+            "type": "string",
+            "example": "conference"
+          }
+        }
+      },
+      "LectureSearchItem": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "example": 1
+          },
+          "title": {
+            "type": "string",
+            "example": "Lecture title"
+          },
+          "description": {
+            "type": "string"
+          },
+          "lecture_start": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lecture_end": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "hash_file_name": {
+            "type": "string"
+          },
+          "original_file_name": {
+            "type": "string"
+          },
+          "conference_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "user_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "category_id": {
+            "type": "integer",
+            "example": 1
+          },
+          "type": {
+            "type": "string",
+            "example": "lecture"
           }
         }
       },
@@ -1667,6 +1811,19 @@
         "type": "array",
         "items": {
           "$ref": "#/components/schemas/Category"
+        }
+      },
+      "SearchIndexResponse": {
+        "type": "array",
+        "items": {
+          "oneOf": [
+            {
+              "$ref": "#/components/schemas/ConferenceSearchItem"
+            },
+            {
+              "$ref": "#/components/schemas/LectureSearchItem"
+            }
+          ]
         }
       }
     },
